# dry10

./: .gitignore  .gitmodules  CMakeLists.txt  FetchDeps.cmake  README.md  shcomd.bat  shcomd.sh
cmake_find/: FindVulkan.cmake
common/: int.hpp
proc/shader_bin/: def.frag.spv  def.vert.spv  dyn.frag.spv  dyn.vert.spv
proc/shader_headers/: def.hpp  def_vk.hpp  dyn.hpp  dyn_vk.hpp  pcsrtype.hpp
res/: .gitignore
res/shaders/: def.frag  def.vert  dyn.frag  dyn.vert
src/: CMakeLists.txt  main.cpp  util.hpp
src/asset/: asset.hpp  asset_resource_adapter.cpp  asset_resource_adapter.hpp  asset_src.hpp  assetreg.cpp  assetreg.hpp  filesys.cpp  filesys.hpp  meshasset.cpp  meshasset.hpp  shader_reflect.cpp  shaderasset.cpp  shaderasset.hpp  texasset.cpp  texasset.hpp  vk_reflect.hpp
src/dbg/: log.cpp  log.hpp
src/dep_tus/: vma_impl.cpp
src/ecs/: component_set.hpp  ecs.hpp  pool_view.hpp
src/engine/: dry_program.cpp  dry_program.hpp
src/graphics/: desc_pool_pool.cpp  desc_pool_pool.hpp  dryprogram.cpp  dryprogram.hpp  grinstance.cpp  grinstance.hpp  instanced_pass.cpp  instanced_pass.hpp  material.hpp  material_base.hpp  pipeline_resources.cpp  pipeline_resources.hpp  renderer.cpp  renderer.hpp  renderer_creates.cpp  renderer_resource_registry.cpp  renderer_resource_registry.hpp  resman.cpp  resman.hpp  texarr.cpp  texarr.hpp  unshaded_pass.cpp  unshaded_pass.hpp  vk_initers.cpp  vk_initers.hpp
src/graphics/core/: grinstance.cpp  grinstance.hpp  material.hpp  renderer.cpp  renderer.hpp  resourcemanager.cpp  resourcemanager.hpp
src/graphics/db/: resourcedb.cpp  resourcedb.hpp  resources.cpp  resources.hpp
src/math/: geometry.cpp  geometry.hpp
src/util/: fs.cpp  fs.hpp  num.hpp  persistent_array.hpp  sparse_array.hpp  sparse_set.hpp  sparse_table.hpp  trans_hashmap.hpp  type.hpp  util.cpp  util.hpp
src/vkw/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  material.hpp  memory.cpp  memory.hpp  pipeline_g.cpp  pipeline_g.hpp  renderable.hpp  renderpass.cpp  renderpass.hpp  swapchain_p.cpp  swapchain_p.hpp  texsampler.cpp  texsampler.hpp  vkw.hpp
src/vkw/cmd/: cmdbuffer.cpp  cmdbuffer.hpp  cmdpool.cpp  cmdpool.hpp
src/vkw/desc/: desc_superpool.cpp  desc_superpool.hpp  desclayout.cpp  desclayout.hpp  descpool.cpp  descpool.hpp  descsets.hpp
src/vkw/device/: defconf.cpp  defconf.hpp  device.cpp  device.hpp  g_device.hpp  instance.cpp  instance.hpp  surface.cpp  surface.hpp  vk_functions.cpp  vk_functions.hpp
src/vkw/image/: image.cpp  image.hpp  imageview.cpp  imageview.hpp  imageviewpair.cpp  imageviewpair.hpp
src/vkw/queue/: queue.cpp  queue.hpp  queue_fun.cpp  queue_fun.hpp  queue_graphics.cpp  queue_graphics.hpp  queue_transfer.cpp  queue_transfer.hpp
src/vkw/shader/: shader.cpp  shader.hpp
src/window/: window.cpp  window.hpp
tests/: CMakeLists.txt
tests/assets/: granite.gltf  plain_color.glsl  unlit_normal.glsl  unlit_tex_inv.glsl  viking_room.gltf  volga.gltf
tests/sandbox/: CMakeLists.txt
tests/sandbox/assets/: blob.dab  building.fbx  cube.fbx  def.glsl  def_inv.glsl  def_inv_inst.glsl  def_pos.glsl  def_pos_inst.glsl  def_tex.glsl  def_tex_inst.glsl  defil.glsl  device.fbx  granite.fbx  lit_tex.glsl  viking_room.fbx  volga.fbx
tests/sandbox/src/: main.cpp
tests/src/: common.hpp  mtf.cpp  orbitals.cpp
tools/dab/: CMakeLists.txt  dab.hpp  main.cpp  mesh_import.cpp  shader_import.cpp  tex_import.cpp
tools/dab/include/dab/: asset.hpp  dabasset.hpp  import.hpp
tools/dab/include/dablib/: dab.hpp
tools/dab/src/: dab.cpp  dab.hpp  dab_impl.cpp  importers.hpp  io_op.hpp  mesh_import.cpp  shader_import.cpp  tex_import.cpp
tools/dab/src/dab/: main.cpp  mesh.cpp  readers.hpp  shader.cpp  texture.cpp
tools/dab/src/lib/: importer.cpp  vkreflect.cpp
tools/dab/src/share/: dab_type.hpp  shpb_type.hpp
tools/dab/src/shpb/: main.cpp
